--- a/flextask.html
+++ b/flextask.html
@@ -6,11 +6,31 @@
     <title>flexbox</title>
   </head>
   <body>
-    <div class="flex">
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
-      <div>4</div>
-    </div>
-  </body>
+    <header>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </header>
+    <main>
+      <div class="main-contents1"></div>
+      <div class="main-contents2">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+       </div>
+    </main>
+    <footer>
+      <div></div>
+      <div></div>
+      <div></div>
+    </footer>
+    </body>
 </html>
